--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body{
 
 .cartão--conteudo h3{
     color: var(--text-color)
+    border: 1px solid var(var(--text-color))
     text-align: left;
     padding: 0.5rem;
     position: absolute;
