--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
 }
 .cartão{
     margin: 1rem 1rem;
-    background-color: rgba(27, 199, 50, 0.808);
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -22,8 +21,10 @@ body{
 
 .cartão--conteudo{
     text-align: center;
-    background-color: rgb(31, 255, 2);
+    background-color: var(--card-front-color);
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
     footer{
@@ -51,3 +52,17 @@ body{
     border-radius: 0.6rem;
     font-size: 1vw;
 }
+ 
+ .cartão__conteudo_pergunto p { 
+    color: var(--text-color);
+    font-weight: 500;
+ }
+
+ .cartão__conteudo_pergunto p {
+    color: var(--card-back-color);
+    font-weight: 700;
+ }
+
+ .cartão:hover.cartão__conteudo{
+     transform: rotateY(180deg);
+ }
