--- a/style.css
+++ b/style.css
@@ -1,78 +1,95 @@
 :root {
-    --text-color: #DBE4EF;
+    --text-color: #eff1f3;
     --card-front-color: #144480;
     --card-back-color: #00F4BF;
-}
-body{
+  }
+  
+  body{
     background: url(img/bg-desktop.webp);
-    font-family:Bai jamjuree;
-} 
-
-#container{
-    display: flex;
-}
-.cartão{
-    margin: 1rem 1rem;
-    height: 20rem;
-    flex-grow: 1;
+     font-family:bai jamjuree ;
+  }
+  
+  #container{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   padding: 4rem;
+   gap: 3rem;
+   
+  }
+  
+  .cartao{ 
+     margin:1rem 1rem ;
+     height: 20rem;
+     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
-}
-
-
-.cartão--conteudo{
+  }
+  
+  .cartao__conteudo {
     text-align: center;
     background-color: var(--card-front-color);
     height: 100%;
     transform-style: preserve-3d;
-    transition: transform 300ms ease-in-out;
-}
-
-    footer{
-    background-color: black;
+    transition:transform 300ms ease-in-out ;
+  }
+  
+  footer{
+    background-color:black;
     color: white;
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 2rem;
-}
-
-    footer p{
+   }
+  
+  footer p {
     text-align: center;
     font-size: 0.75rem;
     margin-top: 0.5rem;
-}
-
-.cartão--conteudo h3{
-    color: var(--text-color)
+   }    
+  
+   .cartao__conteudo h3{
+     color:var(--text-color);
+     border: 1px solid var(--text-color);
+      text-align: left;
+     padding: 0.5rem;
+     position: absolute;
+     margin: 0.6rem;
+     border-radius: 0.6rem;
+     font-size: 1vw;
+     backface-visibility: hidden;
+  
+    }
+  
+  .cartao__conteudo p{
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
+  }
+  
+    .cartao__conteudo__pergunta p {
+      color: var(--text-color);
+      font-weight: 500;
+  
+    }
+  
+    .cartao__conteudo__resposta p {
+      color:var(--card-back-color);
+      font-weight: 700;
+    }
+  
+  .cartao:hover_.cartao__conteudo {
+  
+    transform:  rotateY(180deg);
     
-    text-align: left;
-    padding: 0.5rem;
-    position: absolute;
-    margin: 0.6rem;
-    border-radius: 0.6rem;
-    font-size: 1vw;
+  }
+  
+  .cartao__conteudo__pergunta,
+  .cartao__conteudo__resposta{
     backface-visibility: hidden;
-}
- 
- .cartão__conteudo_pergunta p { 
-    color: var(--text-color);
-    font-weight: 500;
- }
-
- .cartão__conteudo_reposta p {
-    color: var(--card-back-color);
-    font-weight: 700;
- }
-
- .cartão:hover.cartão__conteudo{
-     transform: rotateY(180deg);
- }
-
- .cartão__conteudo_pergunta,
- .cartão__conteudo_reposta{
-    backface-visibility: hidden;
- }
-
- .cartão__conteudo_reposta{
+   
+  }
+   
+  .cartao__conteudo__resposta {
     transform: rotateY(180deg);
- }
+   }
