--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
     margin-top: 1rem;
     padding: 2rem;
     margin-top: 4rem;
+    font-size: 1.4vw;
   }
   
     .cartao__conteudo__pergunta p {
@@ -87,9 +88,31 @@
   .cartao__conteudo__pergunta,
   .cartao__conteudo__resposta{
     backface-visibility: hidden;
+    
    
   }
    
   .cartao__conteudo__resposta {
     transform: rotateY(180deg);
+    background-color: rgba(0, 244,191,0.2);
+    border: 4px solid var(--card-back-color);
+   }
+
+   @media(max-width: 560px){
+    
+    body {
+      background: url('img/bg-mobile.webp');
+    }
+
+     .cartao{
+      flex: 1 0 calc(100% - 1rem);
+     }
+
+     .cartao__conteudo h3{
+       font-size: 3vw;
+     }
+
+     .cartao__conteudo p{
+      font-size: 3.8vw;
+     }
    }
